# Safe-CTDE-MACE

./: .gitignore  Guide_ego.md  README.md  Vibe.md  end_for_paper.md  thesis.md
Safe-CTDE-MACE/: Guide.md  README.md  requirement.txt  thesis.md
Safe-CTDE-MACE/result/qmix_large_eval/: evaluation_failure_summary.csv  last_evaluation_step_diagnostics.csv
Safe-CTDE-MACE/result/qmix_large_train/: evaluation_history.csv  evaluation_trace.json  last_train_trace.json  train_history.csv
Safe-CTDE-MACE/result/ros_eval_root_owned_backup_20260602/: coverage_curve.csv  python_metrics.csv  ros_eval_episode.json  ros_execution_metrics.csv
Safe-CTDE-MACE/safe_ctde_mace/: __init__.py
Safe-CTDE-MACE/safe_ctde_mace/agents/: uav_agent.py
Safe-CTDE-MACE/safe_ctde_mace/communication/: __init__.py  comm_graph.py  map_fusion.py
Safe-CTDE-MACE/safe_ctde_mace/configs/: __init__.py  default_config.yaml  qmix_ego.yaml  qmix_ego_large.yaml  qmix_ego_large_astar.yaml  qmix_ego_large_full_sync.yaml  qmix_ego_large_no_obstacles.yaml  verified_baseline.yaml
Safe-CTDE-MACE/safe_ctde_mace/envs/: multi_uav_env.py  voxel_world.py
Safe-CTDE-MACE/safe_ctde_mace/mapping/: __init__.py  coverage_map.py  frontier_detector.py  voxel_map.py
Safe-CTDE-MACE/tests/: conftest.py  test_config.py  test_coordination_planning.py  test_env.py  test_mapping.py  test_marl.py  test_reporting.py  test_visualization.py
src/uav_simulator/traj_bridge/: CMakeLists.txt  package.xml
src/uav_simulator/traj_bridge/scripts/: ros_eval_playback.py
src/uav_simulator/traj_bridge/src/: traj_bridge_node.cpp
(+37 files in other folders)
